test/domains/compilerErrors/orderIndex-non-int.good
orderIndex-non-int.chpl:3: error: the order argument of 'orderToIndex' on this domain must be an integer, excluding uint(64)
